--- a/pres.html
+++ b/pres.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Introduksjon til F#</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script src="http://gnab.github.com/remark/downloads/remark-0.4.4.min.js" type="text/javascript">
     </script>
