--- a/pres.html
+++ b/pres.html
@@ -78,7 +78,7 @@ class: center, middle
 - Benytter samme (nesten) syntaks som lister
 
       let aSeq = seq [1;2;3]
-      let aSeq' = seq {1..10}
+      let aSeq2 = seq {1..10}
 
       let aLargeSeq = seq {1I..1000000000000I}
 
@@ -117,9 +117,9 @@ class: center, middle
 
       let fancyPrint() = printf "Fancy"
 
-      let add' = fun x y -> x + y
+      let add2 = fun x y -> x + y
 
-      let sub' = function x y -> x-y
+      let sub2 = function x y -> x-y
 
       # kall av funksjoner
 
