--- a/pres.html
+++ b/pres.html
@@ -218,7 +218,7 @@ funksjonen ikke er ferdig definert når den kalles
         | King
 
       let aCard  = Ace 
-      let aCard' = Values(2)
+      let aCard2 = Values(2)
 
 ---
 #Options
@@ -230,7 +230,7 @@ funksjonen ikke er ferdig definert når den kalles
 
       let aMovie = {name="Rambo", duration=120, mType=Some(Action)}
 
-      let aMovie' = {name="Rambo2", duration=120, mType=None}
+      let aMovie2 = {name="Rambo2", duration=120, mType=None}
 
       let gradeMovie movie = 
         match movie.mType with
