--- a/pres.html
+++ b/pres.html
@@ -207,12 +207,12 @@ funksjonen ikke er ferdig definert når den kalles
 - Lar oss deklare "objekter"
 - 'x' brukes for noe som ligner 'this'
 
-    type movie = 
-      {name: string; duration: int}
+      type movie = 
+        {name: string; duration: int}
 
       override x.ToString() = name
 
-    let aMovie = {name="Rambo", duration=120}
+      let aMovie = {name="Rambo", duration=120}
 
 ---
 #Diskrimenerte unioner
@@ -260,10 +260,10 @@ funksjonen ikke er ferdig definert når den kalles
       open Microsoft.FSharp.Linq
       open Microsoft.FSharp.Data.TypeProviders
   
-      type Netfli = ODataService<"http://odata.netflix.com/Catalog/">
+      type Netflix = ODataService<"http://odata.netflix.com/Catalog/">
   
   
-      let data = Netfli.GetDataContext()
+      let data = Netflix.GetDataContext()
   
       let topMovies = query {
           for movie in data.Titles do
@@ -276,8 +276,6 @@ funksjonen ikke er ferdig definert når den kalles
       topMovies 
           |> Seq.take(5)
           |> Seq.iter(fun m ->  printfn "Movie: %s\n" m.Name)
-
-
 
     </textarea>
     <div id="slideshow"></div>
